# Intention

./: .gitignore  .gitpod.yml  BUILD  README.md  WORKSPACE  go.mod  go.sum  skaffold.yaml
.bazel/: base.bzl  deployment.bzl  go.bzl  proto.bzl
.gitpod/: Dockerfile
.trunk/: trunk.yaml
common/resources/db/: BUILD.bazel  connect.go  datasource.go  datasource_test.go
common/services/: BUILD.bazel  flags.go
contracts/finance/accounts/v1/: BUILD.bazel  service.pb.go  service.proto  transaction.pb.go  transaction.proto
finance/contracts/accounts/v1/: BUILD.bazel  create.proto  service.proto  transaction.proto
finance/models/: BUILD.bazel  transaction.proto
finance/services/accounts/: BUILD.bazel
finance/services/accounts/cmd/: BUILD.bazel  main.go  service.go
finance/services/accounts/models/: BUILD.bazel  transaction.go  transaction_test.go
finance/services/accounts/resources/: BUILD.bazel  migration.go  transaction.go
finance/services/accounts/utilities/: BUILD.bazel  transaction.go
k8s/: k8s-pod.yaml
models/finance/: BUILD.bazel  transaction.pb.go  transaction.proto
models/tasks/: BUILD.bazel  tasks.pb.go  tasks.proto
scheduling/contracts/tasks/v1/: BUILD.bazel  create.proto  service.proto
scheduling/services/tasks/cmd/: BUILD.bazel  main.go  service.go
services/finance/accounts/cmd/: BUILD.bazel  main.go  service.go
services/finance/accounts/models/: BUILD.bazel  transaction.go
services/finance/accounts/resources/: BUILD.bazel  migration.go  transaction.go
services/finance/accounts/utilities/: BUILD.bazel  transaction.go
