load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "finance_proto",
    srcs = ["transaction.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "finance_go_proto",
    importpath = "github.com/bar-raisers/intention/models/finance",
    proto = ":finance_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "finance",
    embed = [":finance_go_proto"],
    importpath = "github.com/bar-raisers/intention/models/finance",
    visibility = ["//visibility:public"],
)
