load("@golink//proto:proto.bzl", "go_proto_link")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "tasks_proto",
    srcs = ["tasks.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "tasks_go_proto",
    importpath = "github.com/bar-raisers/intention/models/tasks",
    proto = ":tasks_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "tasks",
    embed = [":tasks_go_proto"],
    importpath = "github.com/bar-raisers/intention/models/tasks",
    visibility = ["//visibility:public"],
)

go_proto_link(
    name = "tasks_go_proto_link",
    dep = ":tasks_go_proto",
    version = "v1",
)
