load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "cmd_lib",
    srcs = [
        "main.go",
        "service.go",
    ],
    importpath = "github.com/bar-raisers/intention/finance/services/accounts/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//common/services",
        "//finance/contracts/accounts/v1:accounts",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":cmd"],
)

oci_image(
    name = "accounts.image",
    base = "@distroless_base",
    entrypoint = ["/app"],
    tars = [":tar"],
)

oci_tarball(
    name = "accounts.tar",
    image = ":accounts.image",
    repo_tags = ["accounts:latest"],
)
