load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = [
        "main.go",
        "service.go",
    ],
    importpath = "github.com/bar-raisers/intention/finance/services/accounts/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//common/resources/db",
        "//common/services",
        "//contracts/finance/accounts/v1:accounts",
        "//finance/services/accounts/models",
        "//finance/services/accounts/resources",
        "//finance/services/accounts/utilities",
        "@io_gorm_gorm//:gorm",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
