load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utilities",
    srcs = ["transaction.go"],
    importpath = "github.com/bar-raisers/intention/finance/services/accounts/utilities",
    visibility = ["//visibility:public"],
    deps = [
        "//finance/services/accounts/models",
        "//models/finance",
    ],
)
