load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = [
        "main.go",
        "service.go",
    ],
    importpath = "github.com/bar-raisers/intention/scheduling/services/tasks/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//common/services",
        "//scheduling/contracts/tasks/v1:tasks",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
