load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = [
        "main.go",
        "service.go",
    ],
    importpath = "github.com/bar-raisers/intention/services/finance/accounts/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//common/resources/db",
        "//common/services",
        "//contracts/finance/accounts/v1:accounts",
        "//services/finance/accounts/models",
        "//services/finance/accounts/resources",
        "//services/finance/accounts/utilities",
        "@io_gorm_gorm//:gorm",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
