load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "resources",
    srcs = [
        "migration.go",
        "transaction.go",
    ],
    importpath = "github.com/bar-raisers/intention/services/finance/accounts/resources",
    visibility = ["//visibility:public"],
    deps = [
        "//services/finance/accounts/models",
        "@io_gorm_gorm//:gorm",
    ],
)
