load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utilities",
    srcs = ["transaction.go"],
    importpath = "github.com/bar-raisers/intention/services/finance/accounts/utilities",
    visibility = ["//visibility:public"],
    deps = [
        "//models/finance",
        "//services/finance/accounts/models",
    ],
)
